edit: 노선별 배차 지시서 노선명 추가

--- a/dispatch/templates/dispatch/line_print.html
+++ b/dispatch/templates/dispatch/line_print.html
@@ -33,7 +33,7 @@
                 <tr>
                     <td class="lineTime">[{{ connect.regularly_id__departure_time }}]</td>
                     <td>{{ connect.regularly_id__number1 }}-{{ connect.regularly_id__number2 }}</td>
-                    <td class="lineRoute">{{ connect.regularly_id__departure }} ▶ {{ connect.regularly_id__arrival }}</td>
+                    <td class="lineRoute">({{ connect.regularly_id__route }}) {{ connect.regularly_id__departure }} ▶ {{ connect.regularly_id__arrival }}</td>
                     <td>{{connect.bus_id__vehicle_num}}</td>
                     <td>{{ connect.driver_id__name }}</td>
                     <td>{{ connect.regularly_id__references  }}</td>
