feat: 출퇴근노선관리 - 위치 항목에 북문 추가

--- a/dispatch/templates/dispatch/regularly_route.html
+++ b/dispatch/templates/dispatch/regularly_route.html
@@ -235,9 +235,11 @@
                             <option {% if detail.location == '셔틀' %} selected {% endif %} value="셔틀">셔틀</option>
                             <option {% if detail.location == '정문' %} selected {% endif %} value="정문">정문</option>
                             <option {% if detail.location == '후문' %} selected {% endif %} value="후문">후문</option>
+                            <option {% if detail.location == '북문' %} selected {% endif %} value="북문">북문</option>
                         </select>
                     </td>
                 </tr>
+                
                 <tr>
                     <td class="tdTypeA">*노선명</td>
                     <td class="tdTypeC">
